# jetFighter

./: CMakeLists.txt  README.md
assets/shaders/: enclosure.frag  enclosure.vert  exhaust.frag  exhaust.vert  ground.frag  ground.vert  model.frag  model.vert  ocean.frag  ocean.vert  shadow.vert  shadowmap.vert  sky.frag  sky.vert  terrain.frag  terrain.vert  tracer.frag  tracer.vert
src/: Camera.cpp  Camera.h  GameWindow.cpp  GameWindow.h  Keys.h  Plane.cpp  Plane.h  config.h  main.cpp
src/physics/: PhysicsWorld.cpp  PhysicsWorld.h  PlaneBody.h
src/renderer/: City.cpp  City.h  Enclosure.cpp  Enclosure.h  Exhaust.cpp  Exhaust.h  FFT.cpp  FFT.hpp  Ground.cpp  Ground.h  Model.cpp  Model.h  Ocean.cpp  Ocean.h  PlaneDebug.cpp  PlaneDebug.h  Shader.cpp  Shader.h  Sky.cpp  Sky.h  Terrain.cpp  Terrain.h  Tracer.cpp  Tracer.h
